add custom HandlerMethodArgumentResolver

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>index - main</title>
+  <title>index - index</title>
 </head>
 <body>
   <div class="container">
