--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -11,6 +11,17 @@
         index
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12 well">
+        <ul>
+          <li><a href="/custom">custom</a></li>
+          <li><a href="/hoge">hoge</a></li>
+          <li><a href="/piyo?hoge=qwe&amp;fuga=rty">piyo</a></li>
+          <li><a href="/poyo?hoge=asd&amp;fuga=fgh">poyo</a></li>
+          <li><a href="/puyo?hoge=zxc&amp;fuga=vbn">puyo</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
